# PrivacyGuard

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COMMUNITY_FIRST.md  CONTRIBUTING.md  INDEX.md  LICENSE  MONETIZATION.md  PERFORMANCE_TUNING.md  QUICKSTART.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
compliance/: CCPA_COMPLIANCE.md  GDPR_COMPLIANCE.md
examples/: advanced_pipeline.py  arabic_plate_detection.py  arabic_text_anonymization.py  batch_images.py  document_anonymization.py  video_file_demo.py  webcam_demo.py
src/privacyguard/: __init__.py  anonymizer.py  api_reference.md  cli.py  core.py  detector.py  ensemble.py  enterprise.py  metadata.py  privacy_guard.py  profiler.py  stream.py
src/privacyguard/detectors/: __init__.py  arabic_plate.py  document.py  multiscript.py  text.py
src/privacyguard/utils/: __init__.py  arabic.py  validation.py
tests/: conftest.py  test_anonymizer.py  test_arabic_detectors.py  test_core.py  test_detector.py  test_enterprise.py  test_privacy_guard.py  test_quality_fixes.py
